styles.css
#navbarName {
  font-size: 3rem;
}

nav {
  font-size: 2rem;
}

.custom-navbar {
  color: #33ff00 !important;
  background-color: black !important;
}

.active {
  background-color: rgb(33, 37, 41) !important;
}

article {
  /* scroll snap */
  overflow-y: scroll;
  scroll-snap-type: y proximity;
  height: 100vh;
}

section {
  padding: 1rem;
  padding-top: 7rem;

  /* sections take up full view */
  height: 100vh;
  width: 100vw;

  /* scroll snap */
  scroll-snap-align: start;
}

body,
html {
  font-size: 100%;
  margin: 0;
  color: #33ff00;
  background-color: rgb(33, 37, 41);
}

a {
  text-decoration: none;
  color: inherit !important;
  border-radius: 0.5rem;
}

a:hover {
  background-color: rgb(33, 37, 41);
}

#about {
  display: flex;
  text-align: center;
  justify-content: center;
  flex-direction: column;
}

.carousel-inner {
  width: 60vw;
  margin: auto;
  border-radius: 1rem;
}

.carousel-item {
  padding-top: 1rem;
  width: 100%;
  height: 75vh;
  overflow: hidden;
}

.carousel-item img {
  height: 100%;
  object-fit: cover;
}

/* change carousel icon color */
.carousel-control-prev-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2333FF00' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
}

.carousel-control-next-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2333FF00' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
}

.term-emu {
  background: black;
  padding: 0;
  margin: 1rem;
  border-radius: 10px;
}

.term-text {
  padding-left: 0.5rem;
  font-family: Ubuntu Mono;
}

.term-pic {
  max-height: 75vh;
  overflow: hidden;
  border-radius: 0px 0px 10px 10px;
}

.term-pic img {
  max-height: initial;
}

#home {
  margin: 0;
}

.red-dot {
  height: 15px;
  width: 15px;
  background-color: #fe6058;
  border-radius: 50%;
  display: inline-block;

  float: left;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.yellow-dot {
  height: 15px;
  width: 15px;
  background-color: #ffbd2e;
  border-radius: 50%;
  display: inline-block;

  float: left;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.green-dot {
  height: 15px;
  width: 15px;
  background-color: #2aca42;
  border-radius: 50%;
  display: inline-block;

  float: left;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

.center {
  margin-left: -4rem;
}

.window-header {
  padding: 0.5rem;
  background-color: #303234;
  border-radius: 10px 10px 0px 0px;
  text-align: center;
}

.blink {
  opacity: 0%;
  animation: blinking 0.6s linear infinite alternate;
  -webkit-animation: blinking 0.6s linear infinite alternate;
}

@-webkit-keyframes blinking {
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes blinking {
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

#contact {
  width: 60vw;
  text-align: center;

  display: block;
  margin-left: auto;
  margin-right: auto;
}

i {
  font-size: 3rem;
  padding: 0.5rem;
}

.email-form {
  color: gray;
}

